[gd_scene load_steps=12 format=2]

[ext_resource path="res://Juego/Mteoritos/MteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Mteoritos/SectorMteorito.gd" type="Script" id=2]
[ext_resource path="res://Juego/Mteoritos/AdvertenciaSfx.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Mteoritos/FuenteSectorMteorito.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 540.104 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 970.032, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 981.805 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1410.5, 10 )

[sub_resource type="DynamicFont" id=5]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "advertencia"
length = 5.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AdvertenciaSfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AdvertenciaSfx:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AdvertenciaSfx:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -9.937, -19.789, -80.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("SpawnerTimer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="SectorMteorito" type="Node2D"]
script = ExtResource( 2 )

[node name="BordesNavePlayer" type="Node2D" parent="."]

[node name="BordeDerecho" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeDerecho"]
shape = SubResource( 1 )

[node name="BordeIzquierdo" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( -960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeIzquierdo"]
shape = SubResource( 1 )

[node name="BordeArriba" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 0, -540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeArriba"]
shape = SubResource( 2 )

[node name="BordeAbajo" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 0, 540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeAbajo"]
shape = SubResource( 2 )

[node name="DetctorFueraZona" type="Node2D" parent="."]

[node name="FueraZonaDerecha" type="Area2D" parent="DetctorFueraZona"]
position = Vector2( 1400, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetctorFueraZona/FueraZonaDerecha"]
modulate = Color( 0, 1, 0.517647, 1 )
shape = SubResource( 3 )

[node name="FueraZonaIzquierda" type="Area2D" parent="DetctorFueraZona"]
position = Vector2( -1400, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetctorFueraZona/FueraZonaIzquierda"]
modulate = Color( 0, 1, 0.517647, 1 )
shape = SubResource( 3 )

[node name="FueraZonaArriba" type="Area2D" parent="DetctorFueraZona"]
position = Vector2( 0, -980 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetctorFueraZona/FueraZonaArriba"]
modulate = Color( 0, 1, 0.517647, 1 )
shape = SubResource( 4 )

[node name="FueraZonaAbajo" type="Area2D" parent="DetctorFueraZona"]
position = Vector2( 0, 980 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetctorFueraZona/FueraZonaAbajo"]
modulate = Color( 0, 1, 0.517647, 1 )
shape = SubResource( 4 )

[node name="Spawners" type="Node2D" parent="."]

[node name="SpawnerCentro" type="Node2D" parent="Spawners"]

[node name="MteoritoSpawner" parent="Spawners/SpawnerCentro" instance=ExtResource( 1 )]
position = Vector2( 1150, 0 )
direccion = Vector2( -1, 0 )

[node name="MteoritoSpawner2" parent="Spawners/SpawnerCentro" instance=ExtResource( 1 )]
position = Vector2( -1150, 0 )
direccion = Vector2( 1, 0 )

[node name="MteoritoSpawner3" parent="Spawners/SpawnerCentro" instance=ExtResource( 1 )]
position = Vector2( 0, 720 )
direccion = Vector2( 0, -1 )

[node name="MteoritoSpawner4" parent="Spawners/SpawnerCentro" instance=ExtResource( 1 )]
position = Vector2( 0, -720 )
direccion = Vector2( 0, -1 )

[node name="SpawnerEsquina" type="Node2D" parent="Spawners"]

[node name="MteoritoSpawner" parent="Spawners/SpawnerEsquina" instance=ExtResource( 1 )]
position = Vector2( 1150, 720 )
direccion = Vector2( -1, -1 )

[node name="MteoritoSpawner2" parent="Spawners/SpawnerEsquina" instance=ExtResource( 1 )]
position = Vector2( 1150, -720 )
direccion = Vector2( -1, 1 )

[node name="MteoritoSpawner3" parent="Spawners/SpawnerEsquina" instance=ExtResource( 1 )]
position = Vector2( -1150, 720 )
direccion = Vector2( 1, -1 )

[node name="MteoritoSpawner4" parent="Spawners/SpawnerEsquina" instance=ExtResource( 1 )]
position = Vector2( -1150, -720 )

[node name="SpawnerIntermedio" type="Node2D" parent="Spawners"]

[node name="ArribaAbajo" type="Node2D" parent="Spawners/SpawnerIntermedio"]

[node name="MteoritoSpawner" parent="Spawners/SpawnerIntermedio/ArribaAbajo" instance=ExtResource( 1 )]
position = Vector2( 575, 720 )
direccion = Vector2( -0.5, -0.5 )

[node name="MteoritoSpawner3" parent="Spawners/SpawnerIntermedio/ArribaAbajo" instance=ExtResource( 1 )]
position = Vector2( 575, -720 )
direccion = Vector2( -0.5, 0.5 )

[node name="MteoritoSpawner2" parent="Spawners/SpawnerIntermedio/ArribaAbajo" instance=ExtResource( 1 )]
position = Vector2( -575, 720 )
direccion = Vector2( 0.5, -0.5 )

[node name="MteoritoSpawner4" parent="Spawners/SpawnerIntermedio/ArribaAbajo" instance=ExtResource( 1 )]
position = Vector2( -575, -720 )
direccion = Vector2( 0.5, 0.5 )

[node name="DerechaIzquierda" type="Node2D" parent="Spawners/SpawnerIntermedio"]

[node name="MteoritoSpawner" parent="Spawners/SpawnerIntermedio/DerechaIzquierda" instance=ExtResource( 1 )]
position = Vector2( 1150, 360 )
direccion = Vector2( 0.5, -0.5 )

[node name="MteoritoSpawner3" parent="Spawners/SpawnerIntermedio/DerechaIzquierda" instance=ExtResource( 1 )]
position = Vector2( -1150, 360 )
direccion = Vector2( -0.5, 0.5 )

[node name="MteoritoSpawner2" parent="Spawners/SpawnerIntermedio/DerechaIzquierda" instance=ExtResource( 1 )]
position = Vector2( 1150, -360 )
direccion = Vector2( -0.5, 0.5 )

[node name="MteoritoSpawner4" parent="Spawners/SpawnerIntermedio/DerechaIzquierda" instance=ExtResource( 1 )]
position = Vector2( -1150, -360 )
direccion = Vector2( 0.5, 0.5 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="SpawnerTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.25 )
self_modulate = Color( 1, 1, 1, 0.341176 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -444.0
margin_top = -48.5
margin_right = 444.0
margin_bottom = 48.5
custom_fonts/font = SubResource( 5 )
text = "Â¡ADVERTENCIA!
Lluvia de meteoritos inminente"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvertenciaSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -17.326
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "advertencia"
anims/advertencia = SubResource( 6 )
anims/default = SubResource( 7 )
[connection signal="body_entered" from="DetctorFueraZona/FueraZonaDerecha" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="DetctorFueraZona/FueraZonaIzquierda" to="." method="_on_FueraZonaIzquierda_body_entered"]
[connection signal="body_entered" from="DetctorFueraZona/FueraZonaArriba" to="." method="_on_FueraZonaArriba_body_entered"]
[connection signal="body_entered" from="DetctorFueraZona/FueraZonaAbajo" to="." method="_on_FueraZonaAbajo_body_entered"]
[connection signal="timeout" from="SpawnerTimer" to="." method="_on_SpawnerTimer_timeout"]
